# wanadichasqui

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: compile.yml
01-wire-protocol/: Cargo.toml
01-wire-protocol/src/: ble_beacon.rs  ble_fragmenter.rs  lib.rs  packet.rs  tests.rs
02-mix-node/: Cargo.toml
02-mix-node/src/: api.rs  config.rs  file_handler.rs  handshake_test.rs  lib.rs  link_preview.rs  link_preview_test.rs  main.rs  node_auth.rs  signal.rs  tls_test.rs
03-crypto-core/: Cargo.toml
03-crypto-core/src/: api.rs  ble_fragmenter.rs  ble_sync.rs  double_ratchet.rs  frb_generated.rs  handshake.rs  identity.rs  key_agreement.rs  lib.rs  mls.rs  zkp.rs
03-crypto-core/tests/: identity.rs  key_agreement.rs
04-dht-simple/: Cargo.toml
04-dht-simple/src/: blob_store.rs  lib.rs
05-storage/: Cargo.toml
05-storage/src/: api.rs  export.rs  import.rs  lib.rs  vault.rs
05-storage/tests/: storage_tests.rs
06-notifications/: Cargo.toml
06-notifications/src/: api.rs  lib.rs  models.rs
07-flutter-app/: .gitignore  analysis_options.yaml  bridge.yaml  build_output.txt  flutter_rust_bridge.yaml  frb.yaml  pubspec.yaml  wanadi-prompt-os.md
07-flutter-app/android/: gradle.properties  local.properties  settings.gradle
07-flutter-app/android/app/: build.gradle  local.properties
07-flutter-app/android/app/src/main/: AndroidManifest.xml
07-flutter-app/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
07-flutter-app/android/app/src/main/kotlin/com/example/wanadi_chasqui/: BLEForegroundService.kt  MainActivity.kt
07-flutter-app/android/app/src/main/kotlin/com/wanadi/chasqui/: BLEForegroundService.kt  MainActivity.kt
07-flutter-app/lib/: main.dart
07-flutter-app/lib/bridge_generated.dart/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
07-flutter-app/lib/models/: contact.dart  message.dart  mls_group.dart
07-flutter-app/lib/screens/: call_screen.dart  chat_screen.dart  contacts_screen.dart  dashboard_screen.dart  groups_screen.dart  identity_screen.dart  multi_device_screen.dart  notifications_screen.dart  offline_sync_screen.dart  settings_screen.dart  sos_screen.dart
07-flutter-app/lib/services/: ble_beacon_codec.dart  ble_mesh_transport.dart  ble_service.dart  chasqui_service.dart  chasqui_service.dart.bak_ble  location_service.dart  tactical_peer_controller.dart
07-flutter-app/lib/wire_protocol/: file_chunk.dart  message_type.dart  packet.dart  packet.dart.bak
07-flutter-app/test/: ble_beacon_codec_test.dart
