[package]
name = "crypto_core"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"

x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
hkdf = "0.12.1"
chacha20poly1305 = "0.10"
thiserror = "1"
once_cell = "1.19"
parking_lot = "0.12"
flutter_rust_bridge = "=2.12.0"

[dev-dependencies]
proptest = "1.4.0"

