[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[lib]
name = "storage"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
hex = "0.4"
getrandom = "0.2"
zeroize = "1"
flutter_rust_bridge = "2.12.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
