[package]
name = "notifications"
version = "0.1.0"
edition = "2021"

[lib]
name = "notifications"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
storage = { path = "../05-storage" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flutter_rust_bridge = "2.12.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
